--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^2.2",
+        "prettus/l5-repository": "^2.9",
         "yajra/laravel-datatables": "^10.1"
     },
     "require-dev": {
