--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^2.2",
         "prettus/l5-repository": "^2.9",
+        "pusher/pusher-php-server": "^7.2",
         "yajra/laravel-datatables": "^10.1"
     },
     "require-dev": {
