--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "watch": "vite build --watch"
+        "watch": "vite build --mode development --watch"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^4.0.0",
-        "axios": "^1.1.2",
-        "bootstrap": "^5.2.3",
+        "axios": "^1.6.5",
+        "bootstrap": "^5.3.2",
         "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^0.7.5",
-        "sass": "^1.56.1",
+        "sass": "^1.70.0",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "packageManager": "yarn@3.6.3",
+    "dependencies": {
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.4.0-rc2"
     }
 }
