--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "packageManager": "yarn@3.6.3",
     "dependencies": {
+        "jquery": "^3.7.1",
         "laravel-echo": "^1.15.3",
         "pusher-js": "^8.4.0-rc2"
     }
